--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^6.2.4",
     "mongoose-currency": "^0.2.0",
     "morgan": "~1.9.1",
+    "multer": "^1.3.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
